k3s/k3s-untrusted/workloads/overseerr/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.local.shelter.li`)
      kind: Rule
      services:
        - name: overseerr-service
          port: 80
      middlewares:
        - name: default-headers
    - match: Host(`overseerr.shelter.li`)
      kind: Rule
      services:
        - name: overseerr-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-shelter-li-tls
